# proyectoPlataformas

./: .gitignore  README.md  compose.yaml  package-lock.json  package.json
back/: Dockerfile  database.py  main.py  models.py  populate_db.py  pyproject.toml
front/: Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js
front/src/: AllComprobantes.jsx  App.jsx  AssignRouteDialog.jsx  Auth.jsx  Comprobantes.jsx  GenerarComprobante.jsx  Header.jsx  Login.jsx  Productos.jsx  Register.jsx  Reportes.jsx  Rutas.jsx  Soporte.jsx  UserPanel.jsx  api.js  global.jsx  index.css
src/: App.jsx  Header.jsx  RoleConfig.js  UserPanel.jsx  global.jsx  style.css
